# deepresearch-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Implementation Plan for Secure Docker-Based Code Execution.md  LICENSE  OPERATIONS.md  PLAN.md  PRD.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  data-pipeline.yml  evaluation.yml
containers/python-sandbox/: Dockerfile
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/src/: main.rs  postgres.rs
crates/deepresearch-agents/: Cargo.toml
crates/deepresearch-agents/src/: agent_context.rs  analyst.rs  critic.rs  lib.rs  researcher.rs
crates/deepresearch-api/: Cargo.toml
crates/deepresearch-api/src/: main.rs
crates/deepresearch-cli/: Cargo.toml
crates/deepresearch-cli/src/: main.rs
crates/deepresearch-core/: Cargo.toml
crates/deepresearch-core/examples/: milestone1_demo.rs
crates/deepresearch-core/src/: config.rs  error.rs  eval.rs  events.rs  graph_executor.rs  lib.rs  logging.rs  metrics.rs  orchestrator.rs  pipeline.rs  planner.rs  security.rs  tasks.rs  telemetry.rs  trace.rs  workflow.rs
crates/deepresearch-core/src/memory/: mod.rs  qdrant.rs
crates/deepresearch-core/src/sandbox/: mod.rs
crates/deepresearch-core/tests/: integration.rs  integration_sandbox.rs  milestone1_integration.rs  sandbox.rs
crates/deepresearch-core/tests/snapshots/: integration__finalize_summary_default.snap
crates/deepresearch-gui/: Cargo.toml  Dockerfile
crates/deepresearch-gui/data/logs/2025/10/: session.jsonl
crates/deepresearch-gui/data/traces/: b1e87adf-c994-4949-905c-e6ccc012aaa4.json  ffc1fe55-8ce5-477d-b677-1094f6c84889.json
crates/deepresearch-gui/deploy/helm/: Chart.yaml
crates/deepresearch-gui/deploy/helm/deepresearch-gui/: values.yaml
crates/deepresearch-gui/deploy/helm/deepresearch-gui/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
crates/deepresearch-gui/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs  telemetry.rs
crates/deepresearch-gui/src/routes/: health.rs  mod.rs  session.rs
crates/deepresearch-gui/tests/: http.rs
crates/deepresearch-gui/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/deepresearch-gui/web/src/: App.tsx
crates/eval-harness/: Cargo.toml
crates/eval-harness/src/: main.rs
docker-compose.overrides/: README.md  docker-compose.dev.yml  docker-compose.sandbox.yml
docs/: CI_GUIDE.md  EVALUATION_CONTRIBUTING.md  GUI_ACCEPTANCE.md  GUI_DEPLOYMENT.md  M13_DATA_PIPELINE.md  M13_EVALUATION.md  M13_GOVERNANCE.md  OPERATIONS.md  RUNBOOK_SANDBOX_OPERATIONS.md  SECURITY_REVIEW_SANDBOX.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USAGE.md
docs/evaluation/: EVALUATION_CONTRIBUTING.md
docs/getting-started/: GUI_ACCEPTANCE.md  TESTING_GUIDE.md  USAGE.md
docs/governance/: M13_GOVERNANCE.md
docs/operations/: CHECKLIST.md  RUNBOOK_SANDBOX_OPERATIONS.md  SECURITY_REVIEW_SANDBOX.md
docs/release/: CI_GUIDE.md  RELEASE_CHECKLIST.md
ops/: prometheus.yml
ops/alerts/: sandbox_alerts.yml
ops/otel/: collector.yaml
ops/sql/: session_records.sql
