[workspace]
members = [
    "crates/deepresearch-core",
    "crates/deepresearch-agents",
    "crates/deepresearch-cli",
    "crates/deepresearch-api"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["DeepResearch Contributors"]
description = "DeepResearch multi-agent system"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
