[workspace]
members = [
    "crates/deepresearch-core",
    "crates/deepresearch-cli",
    "crates/deepresearch-api",
    "crates/deepresearch-gui",
    "crates/data-pipeline",
    "crates/eval-harness"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["DeepResearch Contributors"]
description = "DeepResearch multi-agent orchestration via graph_flow"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.1"
graph-flow = "0.1"
once_cell = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
fastembed = { version = "5" }
qdrant-client = { version = "1" }
libc = "0.2"
opentelemetry = { version = "0.23", features = ["metrics"] }
