[package]
name = "deepresearch-agents"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
deepresearch-core = { path = "../deepresearch-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
