[package]
name = "deepresearch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
deepresearch-core = { path = "../deepresearch-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "deepresearch-api"
path = "src/main.rs"
