[package]
name = "deepresearch-api"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
deepresearch-core = { path = "../deepresearch-core" }
graph-flow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
