[package]
name = "deepresearch-cli"
version = "0.1.9"
edition = "2024"

[features]
default = []
postgres-session = ["deepresearch-core/postgres-session"]
qdrant-retriever = ["deepresearch-core/qdrant-retriever"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
deepresearch-core = { path = "../deepresearch-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
