[package]
name = "deepresearch-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
postgres-session = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
graph-flow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
