[package]
name = "deepresearch-core"
version = "0.2.12"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
postgres-session = []
qdrant-retriever = ["dep:fastembed", "dep:qdrant-client"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
graph-flow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
fastembed = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta = { version = "1.38", features = ["yaml"] }
