[package]
name = "deepresearch-gui"
version = "0.2.12"
edition = "2024"
authors = ["DeepResearch Contributors"]
description = "Axum-powered GUI service for DeepResearch"
license = "GPL-3.0-or-later"

[features]
default = []
postgres-session = ["deepresearch-core/postgres-session"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7", features = ["macros", "ws"] }
deepresearch-core = { path = "../deepresearch-core" }
dashmap = { workspace = true }
graph-flow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { workspace = true }
mime_guess = "2.0"
futures = "0.3"

[dev-dependencies]
axum-test = "15"
